rename box to station + small bug fixes
